# POS

./: CMakeLists.txt
client/: main.c  ui.c  ui.h
common/: protocol.c  protocol.h  unixsock.c  unixsock.h  util.c  util.h
server/: main.c  snake.c  snake.h  world.c  world.h
